Added link element

--- a/Assignment.html
+++ b/Assignment.html
@@ -13,6 +13,8 @@
         <p id="description">We value your feedback. Please fill out the survey form below</p>
         </header>
 
-        <div></div>
+        <div>
+            <a href="/">Link</a>
+        </div>
 </body>
 </html>
