--- a/Assignment.html
+++ b/Assignment.html
@@ -14,15 +14,39 @@
         </header>
         <form id="survey-form">
         <div class="form-group">
-            <label id="name-label" for="name">Name</label>
+            <label id="name-label" for="name">Name:</label>
             <input
               type="text"
               id="name"
               name="name"
             placeholder="Enter your name" required>
         </div>
-         <lable for="name">Enter your name:</lable> 
-
+        <div class="form-group">
+            <label id="email-label" for="name">Email:</label>
+            <input type="text" 
+            id="name" 
+            name="email" 
+            placeholder="Enter your email" required>
+        </div>
+        <div class="form-group">
+            <label id="number-label" for="age">Age:</label>
+            <input 
+            type="number"
+            id="number-label"
+            name="age"
+            min="15"
+            max="70"
+            placeholder="Enter your age" required>
+        </div>
+        <div class="form-group">
+            <label for="dropdown">What is your primary role?</label>
+            <select id="dropdown" name="role" required>
+                <option value>--Select an option--</option>
+                <option value="student">Student</option>
+                <option value="professional">Profession</option>
+                <option value="other">Other</option>
+            </select>
+        </div>
         </form>
     </div>
 </body>
