--- a/Assignment.html
+++ b/Assignment.html
@@ -6,6 +6,7 @@
     <title>Survey Form</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -21,6 +22,7 @@
               name="name"
             placeholder="Enter your name" required>
         </div>
+
         <div class="form-group">
             <label id="email-label" for="name">Email:</label>
             <input type="text" 
@@ -28,6 +30,7 @@
             name="email" 
             placeholder="Enter your email" required>
         </div>
+
         <div class="form-group">
             <label id="number-label" for="age">Age:</label>
             <input 
@@ -38,6 +41,7 @@
             max="70"
             placeholder="Enter your age" required>
         </div>
+
         <div class="form-group">
             <label for="dropdown">What is your primary role?</label>
             <select id="dropdown" name="role" required>
@@ -46,6 +50,20 @@
                 <option value="professional">Profession</option>
                 <option value="other">Other</option>
             </select>
+        </div>
+        
+        <div class="form-group">
+            <p>How did you here about us?</p>
+            <label><input type="radio" name="referral" value="friends" required> Friends</label>
+            <label><input type="radio" name="referral" value="social media" required> Social Media</label>
+            <label> <input type="radio" name="referral" value="other"> Other</label>
+
+        </div>
+        <div class="form-group">
+            <p>What topic are you interested in?</p>
+            <label> <input type="checkbox" name="topic" value="technology"> Technology</label>
+            <label> <input type="checkbox" name="topic" value="design"> Design</label>
+            <label> <input type="checkbox" name="topic" value="business"> Business</label>
         </div>
         </form>
     </div>
