Comment section added

--- a/Assignment.html
+++ b/Assignment.html
@@ -65,6 +65,15 @@
             <label> <input type="checkbox" name="topic" value="design"> Design</label>
             <label> <input type="checkbox" name="topic" value="business"> Business</label>
         </div>
+
+        <div class="form-group">
+            <label for="comments">Additional Comments:</label>
+            <textarea
+            id="comments"
+            name="comments"
+            rows="4"
+            placeholder="Share your thoughts here..." ></textarea>
+        </div>
         </form>
     </div>
 </body>
