--- a/Assignment.html
+++ b/Assignment.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-        <h1 id="title">Survey-form</h1>
+        <h1 id="title">Survey form</h1>
         <p id="description">We value your feedback. Please fill out the survey form below</p>
         </header>
         <form id="survey-form">
@@ -24,9 +24,9 @@
         </div>
 
         <div class="form-group">
-            <label id="email-label" for="name">Email:</label>
-            <input type="text" 
-            id="name" 
+            <label id="email-label" for="email">Email:</label>
+            <input type="email" 
+            id="email" 
             name="email" 
             placeholder="Enter your email" required>
         </div>
@@ -35,7 +35,7 @@
             <label id="number-label" for="age">Age:</label>
             <input 
             type="number"
-            id="number-label"
+            id="age"
             name="age"
             min="15"
             max="70"
@@ -72,7 +72,11 @@
             id="comments"
             name="comments"
             rows="4"
-            placeholder="Share your thoughts here..." ></textarea>
+            placeholder="Share your thoughts here..."></textarea>
+        </div>
+
+        <div class="form-group">
+            <button id="submit" type="submit">Submit</button>
         </div>
         </form>
     </div>
